--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "https://github.com/shriwa/portfolio.git",
   "name": "vitereact",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "vite build",
     "preview": "vite preview"
   },
