--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
